--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gabriela">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Manjari">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
-    <!-- header -->
     <header class="header bg-header vh-100 bg-cover" style="background-image: url(images/gallery/3.jpg);">
         <nav class="navbar navbar-expand-lg pt-md-5 pb-md-5 bg-dark bg-opacity-75">
             <div class="container">
@@ -25,7 +23,7 @@
                     <img class="logo-sm align-text-top d-inline-block" src="images/logo-white.png" alt="Logo"
                         height="60">
                 </a>
-                <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler navbar-light " type="button" data-bs-toggle="collapse"
                     data-bs-target="#navBar">
                     <i class="fa fa-navicon" style="color:#fff; font-size:28px;"></i>
                 </button>
@@ -50,29 +48,12 @@
                 </div>
             </div>
         </nav>
-
-        <!-- header bottom --->
-        <div class="container-fluid bg-opacity-50 align-items-right align-items-md-center 
-        text-nowrap text-white text-md-end text-lg-center
-        head-stickbot head-md-width ahead-md-center mb-5">
-            <div class="row d-flex justify-content-lg-center pe-md-4 pe-lg-0 bg-dark bg-opacity-25">
-                <div class="col-12 col-lg-2 py-2 pe-4 pe-md-1">
-                    <div class=" bd-highlight fw-bold text-end text-lg-center f-Gabriela point">The Bride</div>
-                </div>
-               
-                <div class="col-12 col-lg-2 py-2 pe-4 pe-md-1">
-                    <div class=" bd-highlight fw-bold text-end text-lg-center f-Gabriela point">The Groom</div>
-                </div>
-            </div>
-        </div>
     </header>
-    <!-- locations -->
     <div class="cotainer-fluid m-">
         <div class="container-fluid text-center py-5">
             <h1 class="text-center f-Gabriela f-md-7 text-color-rose">You are invited</h1>
             <h1 class="text-center fs-6 fs-md-4  f-Manjari text-color-rose">On December 15, 2022</h1>
         </div>
-        <!-- blocks -->
         <div class="d-flex flex-column align-items-lg-center">
             <div class="container-fluid container-lg justify-content-start position-relative">
                 <div class="row position-absolute in-behind h-100 overflow-hidden start-0">
@@ -95,7 +76,6 @@
                 </div>
             </div>
             <p class="container mt-md-5 pt-md-5 "></p>
-            <!-- block 2 -->
             <div class="container-fluid container-lg justify-content-end position-relative">
                 <div class="row position-absolute in-behind h-100 overflow-hidden end-0">
                     <div class="col-lg-2"></div>
@@ -119,7 +99,8 @@
         </div>
     </div>
     <div class="space"></div>
-    <!-- story of us -->
+
+
     <div class="container-fluid my-5">
         <div class="row bg-story ">
             <div class="col-12 col-lg-6 d-flex align-items-center justify-content-end">
@@ -135,14 +116,12 @@
                     </iframe>
                 </div>
             </div>
-
         </div>
     </div>
-    <!-- story of us end -->
     <div class="space"></div>
-    <!-- carousel -->
     <div class="container-fluid py-5 my-5">
-        <h1 class="text-center position-relative w-auto f-Gabriela text-color-rose">Messages from friends and family</h1>
+        <h1 class="text-center position-relative w-auto f-Gabriela text-color-rose">Messages from friends and family
+        </h1>
         <div class="position-relative">
             <div id="Caro" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -154,7 +133,8 @@
                                     <div class="col-6 text-center my-5 pt-3">
                                         <h1>Joanne M. B.</h1>
                                         <hr>
-                                        <h5>Wishing you joy, love and happiness on your wedding day and as you begin your new life together.</h5>
+                                        <h5>Wishing you joy, love and happiness on your wedding day and as you begin
+                                            your new life together.</h5>
                                     </div>
                                     <div class="col-3"></div>
                                 </div>
@@ -169,7 +149,8 @@
                                     <div class="col-6 text-center my-5 pt-3">
                                         <h1>Evelyn M.</h1>
                                         <hr>
-                                        <h5>Best wishes on this wonderful journey, as you build your new lives together!</h5>
+                                        <h5>Best wishes on this wonderful journey, as you build your new lives together!
+                                        </h5>
                                     </div>
                                     <div class="col-3"></div>
                                 </div>
@@ -184,7 +165,8 @@
                                     <div class="col-6 text-center my-5 pt-3">
                                         <h1>Glenn Moore</h1>
                                         <hr>
-                                        <h5>"Be kind to each other, tenderhearted, forgiving one another, just as God through Christ has forgiven you." –Ephesians 4:32</h5>
+                                        <h5>"Be kind to each other, tenderhearted, forgiving one another, just as God
+                                            through Christ has forgiven you." –Ephesians 4:32</h5>
                                     </div>
                                     <div class="col-3"></div>
                                 </div>
@@ -203,11 +185,6 @@
             </div>
         </div>
     </div>
-
-    <!-- carousel end -->
-
-
-    <!-- timeline -->
     <div class="container d-flex justify-content-center align-content-center mb-5">
         <div class="row d-flex justify-content-center">
             <div class="col-8">
@@ -267,18 +244,9 @@
             </div>
         </div>
     </div>
-    <!-- timeline end -->
-
-
-
-
     <div class="space m"></div>
-
-
     <div class="container-fluid bg-dark bg-footer ">
-
         <div class="row d-flex flex h-100 justify-content-center align-content-center align-items-center">
-
             <div class="col-3 col-md-4 col-lg-5 text-end">
                 <div class="row d-flex justify-content-end">
                     <div class="col-12 col-md-4 col-lg-2">
@@ -302,12 +270,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-    <!-- registry -->
-
     <div class="modal fade" id="locationModal">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -331,21 +293,12 @@
             </div>
         </div>
     </div>
-
-
-
-
-    <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <script src="js/mainjs.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://player.vimeo.com/api/player.js"></script>
-
-
-
-
 </body>
 
 </html>
