--- a/registry.html
+++ b/registry.html
@@ -20,7 +20,8 @@
         <nav class="navbar navbar-expand-lg pt-md-5 pb-md-5 ">
             <div class="container">
                 <a class="navbar-brand d-flex align-content-around align-items-center px-4" href="index.html">
-                    <img class="logo-sm align-text-top d-inline-block" src="images/logo-white.png" alt="Logo" height="60">
+                    <img class="logo-sm align-text-top d-inline-block" src="images/logo-white.png" alt="Logo"
+                        height="60">
                 </a>
                 <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navBar">
@@ -47,15 +48,9 @@
                     </ul>
                 </div>
             </div>
-
         </nav>
-        <!-- header bottom --->
-
     </header>
-
-
     <div class="space"></div>
-    <!--  -->
     <div class="container-fluid">
         <div clas="container">
             <div class="row d-flex justify-content-center">
@@ -68,9 +63,7 @@
                 </div>
             </div>
         </div>
-
     </div>
-
     <div clas="container">
         <div class="row w-100">
             <div class="col-12 text-center">
@@ -91,10 +84,8 @@
             </div>
         </div>
     </div>
-
-
     <div class="container">
-        <section  id="kitchen_row">
+        <section id="kitchen_row">
             <div class="row d-flex justify-content-around text-center mt-5 ">
                 <div class="col-6 col-md-3 col-lg-2">
                     <img id="Cutlery Set" class="rounded-circle img-fluid" src="images/cutlery.png"
@@ -117,7 +108,6 @@
                     <h5>Spatula Set</h5>
                 </div>
             </div>
-
             <div class="row d-flex justify-content-around text-center mt-5">
                 <div class="col-6 col-md-3 col-lg-2">
                     <img id="Waffle Maker" class="rounded-circle img-fluid " src="images/waffle.png"
@@ -129,13 +119,11 @@
                         data-bs-toggle="modal" data-bs-target="#pledgeModal" onclick="chngeModTitle(id);">
                     <h5>Coffee Maker</h5>
                 </div>
-
                 <div class="col-6 col-md-3 col-lg-2">
                     <img id="Air Fryer" class="rounded-circle img-fluid " src="images/air.png" data-bs-toggle="modal"
                         data-bs-target="#pledgeModal" onclick="chngeModTitle(id);">
                     <h5>Air Fryer</h5>
                 </div>
-
                 <div class="col-6 col-md-3 col-lg-2">
                     <img id="Toaster" class="rounded-circle img-fluid " src="images/toaster.png" data-bs-toggle="modal"
                         data-bs-target="#pledgeModal" onclick="chngeModTitle(id);">
@@ -143,7 +131,6 @@
                 </div>
             </div>
         </section>
-
         <section id="dining_row">
             <div class="row d-flex justify-content-around text-center mt-5 ">
                 <div class="col-6 col-md-3 col-lg-2">
@@ -168,7 +155,6 @@
                 </div>
             </div>
         </section>
-
         <section id="living_row">
             <div class="row d-flex justify-content-around text-center mt-5 ">
                 <div class="col-6 col-md-3 col-lg-2">
@@ -192,7 +178,6 @@
                     <h5>Lamp</h5>
                 </div>
             </div>
-
             <div class="row d-flex justify-content-around text-center mt-5">
                 <div class="col-6 col-md-3 col-lg-2">
                     <img id="Vacuum Cleaner" class="rounded-circle img-fluid " src="images/Vacuum.png"
@@ -216,7 +201,6 @@
                 </div>
             </div>
         </section>
-
         <section id="bedroom_row">
             <div class="row d-flex justify-content-around text-center mt-5 ">
                 <div class="col-6 col-md-3 col-lg-2">
@@ -242,12 +226,7 @@
             </div>
         </section>
     </div>
-
-
-
-
     <div class="space"></div>
-
     <div class="modal fade" id="pledgeModal">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content   rounded-circle">
@@ -276,8 +255,8 @@
             </div>
         </div>
     </div>
-
-    <div class="container-fluid parallax my-2 my-lg-5 py-2 py-lg-2" style="background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('images/gallery/paoay.jpg');">
+    <div class="container-fluid parallax my-2 my-lg-5 py-2 py-lg-2"
+        style="background-image: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('images/gallery/paoay.jpg');">
         <div class="row d-flex flex-column text-center align-items-center py-5 mt-5">
             <div class="col-8">
                 <h1>Your presence at our wedding is alread a great gift to us.</h1>
@@ -286,12 +265,8 @@
                 <h5 class="mt-5">If you wish to send it in advance, we’ve set up a few options
                     of for you.</h5>
             </div>
-
-
         </div>
     </div>
-    <!--  -->
-
     <div class="container my-5 py-5">
         <div class="row  d-flex justify-content-around  text-center">
             <div class="col-10">
@@ -309,33 +284,11 @@
                         <img class="img-fluid" src="images/gcash.png" alt="">
                     </div>
                 </div>
-
             </div>
         </div>
-
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <div class="container-fluid bg-dark bg-footer ">
-
         <div class="row d-flex flex h-100 justify-content-center align-content-center align-items-center">
-
             <div class="col-3 col-md-4 col-lg-5 text-end">
                 <div class="row d-flex justify-content-end">
                     <div class="col-12 col-md-4 col-lg-2">
@@ -359,7 +312,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
