--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <link rel="stylesheet" href="css/style.css">
 
 
-    <meta property='og:title' content='JustinandJecery'/>
-    <meta property='og:image' content='images/thumb.jpg'/>
-    <meta property='og:description' content='Wedding at December 15, 2022'/>
-    <meta property='og:url' content='justinandjecery.vercel.app'/>
+    <meta property='og:title' content='JustinandJecery' />
+    <meta property='og:image' content='images/thumb.jpg' />
+    <meta property='og:description' content='Wedding at December 15, 2022' />
+    <meta property='og:url' content='justinandjecery.vercel.app' />
     <meta property='og:image:width' content='1200' />
     <meta property='og:image:height' content='627' />
 
@@ -64,7 +64,7 @@
         </nav>
         <div class="container-fluid h-75  position-relative">
             <div class="row align-content-center mt-5 mt-md-0 position-absolute bottom-0 w-100">
-                <div class="col-5 bg-dark bg-opacity-50 p-5 ">
+                <div class="col-6 bg-dark bg-opacity-50 p-5 ">
                     <div class="text-center text-white">
                         <h1 class="fw-bold">Justin & Jecery</h1>
                         <div class="col-4 ">
@@ -85,13 +85,13 @@
             <p class="text-center fs-5 text-muted">see you there!</p>
 
             <div class="row d-flex justify-content-center my-5 position-relative">
-                
+
                 <div class="col-6 text-end">
                     <div class="row d-flex justify-content-end align-content-center align-items-center">.
-                        <div class="col-3 text-lg-end text-start">
+                        <div class="col-5 col-md-3 text-lg-end text-start">
                             <p class="f-Sacramento text-rose-only fs-1">Justin</p>
                         </div>
-                        <div class="col-lg-2 col-4">
+                        <div class="col-lg-2 col-6">
                             <a href="https://www.facebook.com/tsujiiin"><img class="img-fluid rounded-circle i2"
                                     src="images/dodong.jpg" alt="groom"></a>
                         </div>
@@ -100,7 +100,7 @@
 
                 <div class="col-6 ">
                     <div class="row d-flex justify-content-start align-content-center align-items-center">
-                        <div class="col-lg-2 col-4">
+                        <div class="col-lg-2 col-6">
                             <a href="https://www.facebook.com/bimbapp"><img class="img-fluid rounded-circle i2"
                                     src="images/dadai.jpg" alt="groom"></a>
                         </div>
@@ -114,13 +114,15 @@
     </div>
 
 
-    <div class="container-fluid parallax bg-info" style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('images/lax.jpg');">
+    <div class="container-fluid parallax bg-info"
+        style="background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('images/lax.jpg');">
         <div class="blur py-5 text-white">
             <div class="space"></div>
             <div class="row d-flex justify-content-center text-center">
                 <p class="fw-bold">THE SPECIAL DAY</p>
                 <p class="f-Sacramento fs-title ">Church and Party</p>
-                <div class="col-12 col-md-6 col-lg-4 mb-4 mb-lg-0 bg-white border border-opacity-10 border-2 bg-opacity-10 rounded-3 me-3">
+                <div
+                    class="col-11 col-md-5 col-lg-4 mb-4 mb-lg-0 bg-white border border-opacity-10 border-2 bg-opacity-10 rounded-3 me-md-3 ">
                     <p class="fs-3">Our Lady of the Assumption<br>Quasi-Parish</p>
                     <hr>
                     <div class="row my-4">
@@ -145,7 +147,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 bg-white border border-opacity-10 border-2 bg-opacity-10 rounded-3 me-3">
+                <div
+                    class="col-11 col-md-5 col-lg-4 mb-4 mb-lg-0 bg-white border border-opacity-10 border-2 bg-opacity-10 rounded-3 me-md-3 ">
                     <p class="fs-3">D' Veranda<br>An Events Place</p>
                     <hr>
                     <div class="row my-4">
@@ -173,24 +176,21 @@
             <div class="space"></div>
         </div>
     </div>
-   
-        <div class="container-fluid vh-75 py-5 text-center bg-cover"
-            style="background-image: url(images/bg-footer-100.png);">
-            <h1 class="f-Sacramento fs-title text-rose-only">A Story of Us</h1>
-            <p>From 2010 to 2022 and for the years to come.</p>
-            <div class="row d-flex justify-content-center">
-                <div class="col-12 col-lg-8">
-                    <div class="vid_container text-center pt-5">
-                        <iframe class="video" src="https://streamable.com/e/qov1mt?nocontrols=1&loop=0&">
-                        </iframe>
-                    </div>
+
+    <div class="container-fluid py-5 text-center bg-cover"
+        style="background-image: url(images/bg-footer-100.png);">
+        <h1 class="f-Sacramento fs-title">A Story of Us</h1>
+        <p>From 2010 to 2022 and for the years to come.</p>
+        <div class="row d-flex justify-content-center">
+            <div class="col-12 col-lg-8">
+                <div class="vid_container text-center pt-5">
+                    <iframe class="video" src="https://streamable.com/e/qov1mt?nocontrols=1&loop=0&">
+                    </iframe>
                 </div>
             </div>
+        </div>
     </div>
-    <div class="space"></div>
-    <div class="space"></div>
-
-    <div class="container-fluid text-white d-flex justify-content-center align-content-center parallax py-5"
+    <div class="container-fluid text-white d-flex justify-content-center align-content-center parallax py-5 mt-5"
         style="background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(images/veranda.jpg);">
         <div class="blur row d-flex justify-content-center">
             <div class="col-12 py-5 ">
@@ -221,20 +221,20 @@
         </div>
     </div>
 
-<div class="container-fluid bg-cover py-5" style="background-image:url(images/bg-footer.png);">
-    <div class="row">
-        <div class="col-12">
-            <p class="fs-title f-Sacramento text-rose-only text-center mt-5 text-nowrap">The Color Motif</p>
+    <div class="container-fluid bg-cover py-5" style="background-image:url(images/bg-footer.png);">
+        <div class="row">
+            <div class="col-12">
+                <p class="fs-title f-Sacramento text-rose-only text-center mt-5 text-nowrap">The Color Motif</p>
+            </div>
         </div>
-    </div>
-    <div class="row f-flex justify-content-center">
-        <div class="col-6">
-            <img class="img-fluid mb-5" src="images/motif.png" alt="">
+        <div class="row f-flex justify-content-center">
+            <div class="col-6">
+                <img class="img-fluid mb-5" src="images/motif.png" alt="">
 
+            </div>
         </div>
-    </div>
 
-</div>
+    </div>
 
 
 
